Aggiunte news settimanali

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -81,4 +81,5 @@ nav:
   - Riabilitazione: riabilitazione/
   - Imaging: imaging-diagnostica/
   - Pain Management: pain-management/
+  - News: news/
   - Tag: tags.md
