Add NCBI UA/email, retries and connectivity checks
Set NCBI email in workflow and script; add NCBI_USER_AGENT and set feedparser USER_AGENT. Introduce _ncbi_request helper that attaches email, sets User-Agent, and retries with exponential backoff. Use _ncbi_request for esearch/efetch calls. Increase various rate-limit sleeps (efetch loop, analyze_batch, main batch). Configure Anthropic client with retries and timeout and add a connectivity pre-check for NCBI and Anthropic endpoints. Improves robustness and compliance with NCBI usage guidelines and fails early on connectivity issues.

--- a/.github/workflows/weekly_news.yml
+++ b/.github/workflows/weekly_news.yml
@@ -41,6 +41,7 @@ jobs:
       - name: Fetch & analyze PubMed articles
         env:
           ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          NCBI_EMAIL: "orto_pedia_bot@github.com"
         run: |
           ARGS=""
           if [ -n "${{ github.event.inputs.date }}" ]; then
