--- a/.github/workflows/weekly_news.yml
+++ b/.github/workflows/weekly_news.yml
@@ -40,7 +40,7 @@ jobs:
 
       - name: Fetch & analyze PubMed articles
         env:
-          ANTHROPIC_API_KEY: ${{ secrets.ANTHROPIC_API_KEY }}
+          OPENAI_API_KEY: ${{ secrets.OPENAI_API_KEY }}
           NCBI_EMAIL: "orto_pedia_bot@github.com"
         run: |
           ARGS=""
