--- a/.github/workflows/weekly_news.yml
+++ b/.github/workflows/weekly_news.yml
@@ -53,14 +53,23 @@ jobs:
           python scripts/fetch_news.py $ARGS
 
       - name: Commit & Push if changed
+        id: push
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
           git add docs/news/
           if git diff --staged --quiet; then
             echo "Nessun nuovo contenuto da committare."
+            echo "pushed=false" >> "$GITHUB_OUTPUT"
           else
             DATE=$(date +%Y-%m-%d)
             git commit -m "docs(news): rassegna settimanale ${DATE}"
             git push
+            echo "pushed=true" >> "$GITHUB_OUTPUT"
           fi
+
+      - name: Trigger deploy
+        if: steps.push.outputs.pushed == 'true'
+        run: gh workflow run deploy.yml
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
